--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -21,16 +21,23 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Enable arm64 multi-arch and add ports
+      - name: Enable arm64 multi‑arch and add ports
         run: |
-          sudo dpkg --add-architecture arm64
-          sudo rm -f /etc/apt/sources.list.d/arm64-ports.list
-          echo "deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports jammy main universe multiverse restricted" | sudo tee /etc/apt/sources.list.d/arm64-ports.list
-          echo "deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports jammy-updates main universe multiverse restricted" | sudo tee -a /etc/apt/sources.list.d/arm64-ports.list
-          echo "deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports jammy-security main universe multiverse restricted" | sudo tee -a /etc/apt/sources.list.d/arm64-ports.list
+          sudo dpkg --add‑architecture arm64
+          # Remove any stale file
+          sudo rm -f /etc/apt/sources.list.d/arm64‑ports.list
+
+          echo "deb [arch=arm64] http://ports.ubuntu.com/ubuntu‑ports jammy main universe multiverse restricted" \
+            | sudo tee /etc/apt/sources.list.d/arm64‑ports.list
+          echo "deb [arch=arm64] http://ports.ubuntu.com/ubuntu‑ports jammy‑updates main universe multiverse restricted" \
+            | sudo tee -a /etc/apt/sources.list.d/arm64‑ports.list
+          echo "deb [arch=arm64] http://ports.ubuntu.com/ubuntu‑ports jammy‑security main universe multiverse restricted" \
+            | sudo tee -a /etc/apt/sources.list.d/arm64‑ports.list
+
+          # Refresh sources
           sudo apt update
 
-      - name: Install cross-compile dependencies
+      - name: Install cross‑compile dependencies
         run: |
           sudo apt install -y --no-install-recommends \
             build-essential wget git python3 gettext \
@@ -47,14 +54,16 @@ jobs:
         run: |
           sudo ln -sf /usr/bin/pkgconf /usr/local/bin/pkg-config
 
-      - name: Download & unpack LLVM-Mingw
+      - name: Download & unpack LLVM‑Mingw
         run: |
-          mkdir -p "$HOME/llvm-mingw"
-          wget -q "https://github.com/mstorsjo/llvm-mingw/releases/download/${LLVM_MINGW_VERSION}/llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-x86_64.tar.xz"
-          tar -xJf "llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-x86_64.tar.xz" -C "$HOME/llvm-mingw" --strip-components=1
-          rm "llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-x86_64.tar.xz"
+          mkdir -p "$HOME/llvm‑mingw"
+          wget -q \
+            "https://github.com/mstorsjo/llvm‑mingw/releases/download/${LLVM_MINGW_VERSION}/llvm‑mingw‑${LLVM_MINGW_VERSION}‑ucrt‑ubuntu‑22.04‑x86_64.tar.xz"
+          tar -xJf "llvm‑mingw‑${LLVM_MINGW_VERSION}‑ucrt‑ubuntu‑22.04‑x86_64.tar.xz" \
+            -C "$HOME/llvm‑mingw" --strip-components=1
+          rm "llvm‑mingw‑${LLVM_MINGW_VERSION}‑ucrt‑ubuntu‑22.04‑x86_64.tar.xz"
 
-      - name: Add llvm-mingw to PATH
+      - name: Add llvm‑mingw to PATH
         run: |
           echo "${LLVM_MINGW_DIR}/bin" >> "$GITHUB_PATH"
 
@@ -63,85 +72,101 @@ jobs:
           git submodule update --init --recursive
           mkdir -p wine
           if [ ! -f wine/configure ]; then
-            wget -q "https://dl.winehq.org/wine/source/11.1/wine-11.1.tar.xz"
-            tar -xJf wine-11.1.tar.xz -C wine --strip-components=1
+            wget -q "https://dl.winehq.org/wine/source/11.1/wine‑11.1.tar.xz"
+            tar -xJf wine‑11.1.tar.xz -C wine --strip-components=1
           fi
 
       - name: Apply Wine Staging patches
         run: |
-          git clone https://gitlab.winehq.org/wine/wine-staging.git wine-staging
-          cd wine-staging/patches
+          git clone https://gitlab.winehq.org/wine/wine‑staging.git wine‑staging
+          cd wine‑staging/patches
           git apply ../*.patch || true
 
       - name: Configure & Build Wine with Wow64
         run: |
-          mkdir -p "$BUILD_DIR"
+          mkdir ‑p "$BUILD_DIR"
           cd "$BUILD_DIR"
-          export PKG_CONFIG=pkg-config
+          export PKG_CONFIG=pkg‑config
           export PKG_CONFIG_PATH="/usr/lib/arm64/pkgconfig:${PKG_CONFIG_PATH:-}"
-          export CC=aarch64-w64-mingw32-clang
-          export CXX=aarch64-w64-mingw32-clang++
-          export AR=aarch64-w64-mingw32-ar
-          export RANLIB=aarch64-w64-mingw32-ranlib
-          export STRIP=aarch64-w64-mingw32-strip
+          export CC=aarch64‑w64‑mingw32‑clang
+          export CXX=aarch64‑w64‑mingw32‑clang++
+          export AR=aarch64‑w64‑mingw32‑ar
+          export RANLIB=aarch64‑w64‑mingw32‑ranlib
+          export STRIP=aarch64‑w64‑mingw32‑strip
           ../wine/configure \
-            --host=aarch64-w64-mingw32 \
-            --with-wine-tools=../host \
-            --enable-win64 \
-            --enable-wow64 \
-            --enable-archs=arm64ec,aarch64 \
-            --disable-tests \
-            --enable-ntsync \
-            --without-x \
-            --without-vulkan
+            --host=aarch64‑w64‑mingw32 \
+            --with‑wine‑tools=../host \
+            --enable‑win64 \
+            --enable‑wow64 \
+            --enable‑archs=arm64ec,aarch64 \
+            --disable‑tests \
+            --enable‑ntsync \
+            --without‑x \
+            --without‑vulkan
           make -j1
           DESTDIR="$PWD/install" make install
 
       - name: Integrate DXVK, VKD3D, Turnip
         run: |
-          mkdir -p "$BUILD_DIR/external"
-          wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/DXVK-GPLASYNC-ARM64EC/dxvk-gplasync-arm64ec-2.7.1-1.wcp"
-          mkdir -p "$BUILD_DIR/external/dxvk"
-          tar -xJf dxvk-gplasync-arm64ec-2.7.1-1.wcp -C "$BUILD_DIR/external/dxvk"
-          wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/VKD3D-PROTON-ARM64EC/vkd3d-proton-arm64ec-3.0b.wcp"
-          mkdir -p "$BUILD_DIR/external/vkd3d"
-          tar -xJf vkd3d-proton-arm64ec-3.0b.wcp -C "$BUILD_DIR/external/vkd3d"
-          wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/MESA-TURNIP-ARM64EC/mesa-turnip-arm64ec.wcp"
-          mkdir -p "$BUILD_DIR/external/mesa"
-          tar -xJf mesa-turnip-arm64ec.wcp -C "$BUILD_DIR/external/mesa"
+          mkdir ‑p "$BUILD_DIR/external"
+          wget -q \
+            "https://github.com/Arihany/WinlatorWCPHub/releases/download/DXVK‑GPLASYNC‑ARM64EC/dxvk‑gplasync‑arm64ec‑2.7.1‑1.wcp"
+          mkdir ‑p "$BUILD_DIR/external/dxvk"
+          tar ‑xJf dxvk‑gplasync‑arm64ec‑2.7.1‑1.wcp \
+            ‑C "$BUILD_DIR/external/dxvk"
 
-      - name: Download & unpack FEXCore-2601 .wcp
+          wget -q \
+            "https://github.com/Arihany/WinlatorWCPHub/releases/download/VKD3D‑PROTON‑ARM64EC/vkd3d‑proton‑arm64ec‑3.0b.wcp"
+          mkdir ‑p "$BUILD_DIR/external/vkd3d"
+          tar ‑xJf vkd3d‑proton‑arm64ec‑3.0b.wcp \
+            ‑C "$BUILD_DIR/external/vkd3d"
+
+          wget -q \
+            "https://github.com/Arihany/WinlatorWCPHub/releases/download/MESA‑TURNIP‑ARM64EC/mesa‑turnip‑arm64ec.wcp"
+          mkdir ‑p "$BUILD_DIR/external/mesa"
+          tar ‑xJf mesa‑turnip‑arm64ec.wcp \
+            ‑C "$BUILD_DIR/external/mesa"
+
+      - name: Download & unpack FEXCore‑2601 .wcp
         run: |
-          mkdir -p "$WCP_DIR/lib/wine/arm64ec-windows"
-          wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/FEXCore/FEXCore-2601.wcp" -O FEXCore-2601.wcp
-          tar -xJf FEXCore-2601.wcp -C "$WCP_DIR/lib/wine/arm64ec-windows"
+          mkdir ‑p "$WCP_DIR/lib/wine/arm64ec‑windows"
+          wget -q \
+            "https://github.com/Arihany/WinlatorWCPHub/releases/download/FEXCore/FEXCore‑2601.wcp" \
+            ‑O FEXCore‑2601.wcp
+          tar ‑xJf FEXCore‑2601.wcp \
+            ‑C "$WCP_DIR/lib/wine/arm64ec‑windows"
 
       - name: Prepare PHAT .wcp tree
         run: |
-          rm -rf "$WCP_DIR"
-          mkdir -p "$WCP_DIR/bin" \
-                   "$WCP_DIR/lib/wine/aarch64-unix" \
-                   "$WCP_DIR/lib/wine/aarch64-windows" \
-                   "$WCP_DIR/lib/wine/arm64ec-windows" \
+          rm ‑rf "$WCP_DIR"
+          mkdir ‑p "$WCP_DIR/bin" \
+                   "$WCP_DIR/lib/wine/aarch64‑unix" \
+                   "$WCP_DIR/lib/wine/aarch64‑windows" \
+                   "$WCP_DIR/lib/wine/arm64ec‑windows" \
                    "$WCP_DIR/share/wine" \
                    "$WCP_DIR/dxvk/arm64ec" \
                    "$WCP_DIR/vkd3d/arm64ec" \
                    "$WCP_DIR/mesa/turnip"
-          cp -v "$BUILD_DIR/install/bin/wine" "$WCP_DIR/bin/"
-          cp -v "$BUILD_DIR/install/bin/wine64" "$WCP_DIR/bin/"
-          cp -v "$BUILD_DIR/install/bin/wineserver" "$WCP_DIR/bin/"
-          cp -v "$BUILD_DIR/install/bin/wineboot" "$WCP_DIR/bin/"
-          cp -rv "$BUILD_DIR/install/lib/"* "$WCP_DIR/lib/wine/aarch64-unix/"
-          cp -rv "$BUILD_DIR/install/lib/"* "$WCP_DIR/lib/wine/aarch64-windows/"
-          cp -rv "$WCP_DIR/lib/wine/arm64ec-windows/"* "$WCP_DIR/lib/wine/arm64ec-windows/"
-          cp -rv "$BUILD_DIR/external/dxvk/"* "$WCP_DIR/dxvk/arm64ec/"
-          cp -rv "$BUILD_DIR/external/vkd3d/"* "$WCP_DIR/vkd3d/arm64ec/"
-          cp -rv "$BUILD_DIR/external/mesa/"* "$WCP_DIR/mesa/turnip/"
+
+          cp ‑v "$BUILD_DIR/install/bin/wine" "$WCP_DIR/bin/"
+          cp ‑v "$BUILD_DIR/install/bin/wine64" "$WCP_DIR/bin/"
+          cp ‑v "$BUILD_DIR/install/bin/wineserver" "$WCP_DIR/bin/"
+          cp ‑v "$BUILD_DIR/install/bin/wineboot" "$WCP_DIR/bin/"
+
+          cp ‑rv "$BUILD_DIR/install/lib/"* "$WCP_DIR/lib/wine/aarch64‑unix/"
+          cp ‑rv "$BUILD_DIR/install/lib/"* "$WCP_DIR/lib/wine/aarch64‑windows/"
+          cp ‑rv "$WCP_DIR/lib/wine/arm64ec‑windows/"* "$WCP_DIR/lib/wine/arm64ec‑windows/"
+
+          cp ‑rv "$BUILD_DIR/external/dxvk/"* "$WCP_DIR/dxvk/arm64ec/"
+          cp ‑rv "$BUILD_DIR/external/vkd3d/"* "$WCP_DIR/vkd3d/arm64ec/"
+          cp ‑rv "$BUILD_DIR/external/mesa/"* "$WCP_DIR/mesa/turnip/"
+
           printf "export WINEPREFIX=~/.wine\nexport WINEARCH=win64\n" > "$WCP_DIR/env.sh"
-          printf '{ "version":"%s", "arch":"arm64ec", "type":"phat" }' "$WINE_VERSION" > "$WCP_DIR/info.json"
+          printf '{ "version":"%s", "arch":"arm64ec", "type":"phat" }' \
+            "$WINE_VERSION" > "$WCP_DIR/info.json"
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload‑artifact@v4
         with:
-          name: wine-arm64ec-phat
+          name: wine‑arm64ec‑phat
           path: $WCP_DIR
