--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -12,23 +12,24 @@ jobs:
 
     steps:
 
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Install QEMU support
+      - name: Register QEMU for ARM
         uses: docker/setup-qemu-action@v3
         with:
-          platforms: all
+          platforms: linux/arm64
 
       - name: Build inside ARM64 container
         uses: addnab/docker-run-action@v3
         with:
-          image: arm64v8/ubuntu:latest
+          image: ubuntu:24.04
+          platform: linux/arm64
           options: --privileged
           run: |
             set -e
 
-            # Update and install dependencies
+            # Update base system
             apt update
             DEBIAN_FRONTEND=noninteractive apt install -y --no-install-recommends \
               build-essential wget git python3 gettext \
@@ -39,22 +40,25 @@ jobs:
               libavcodec-dev libavformat-dev libavutil-dev libswscale-dev \
               libudev-dev ca-certificates
 
+            # Symlink pkgconf → pkg-config
             ln -sf /usr/bin/pkgconf /usr/local/bin/pkg-config
 
+            # Environment variables
             export WINE_VERSION="11.1"
             export LLVM_MINGW_VERSION="20251216"
             export LLVM_MINGW_DIR="$HOME/llvm-mingw"
             export BUILD_DIR="$PWD/build"
             export WCP_DIR="$PWD/wcp"
 
+            # Download & unpack llvm-mingw toolchain
             mkdir -p "$LLVM_MINGW_DIR"
             wget -q "https://github.com/mstorsjo/llvm-mingw/releases/download/${LLVM_MINGW_VERSION}/llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-x86_64.tar.xz"
-            tar -xJf "llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-x86_64.tar.xz" \
+            tar -xJf llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-x86_64.tar.xz \
               -C "$LLVM_MINGW_DIR" --strip-components=1
-            rm "llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-x86_64.tar.xz"
-
+            rm llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-x86_64.tar.xz
             export PATH="$LLVM_MINGW_DIR/bin:$PATH"
 
+            # Prepare Wine sources
             git submodule update --init --recursive
             mkdir -p wine
             if [ ! -f wine/configure ]; then
@@ -62,12 +66,15 @@ jobs:
               tar -xJf "wine-${WINE_VERSION}.tar.xz" -C wine --strip-components=1
             fi
 
+            # Apply Wine Staging patches
             git clone https://gitlab.winehq.org/wine/wine-staging.git wine-staging
             cd wine-staging/patches
             git apply ../*.patch || true
             cd -
 
-            mkdir -p "$BUILD_DIR" && cd "$BUILD_DIR"
+            # Configure & build Wine
+            mkdir -p "$BUILD_DIR"
+            cd "$BUILD_DIR"
             export PKG_CONFIG=pkg-config
             export PKG_CONFIG_PATH="/usr/lib/arm64/pkgconfig:${PKG_CONFIG_PATH:-}"
             export CC=aarch64-w64-mingw32-clang
@@ -91,26 +98,26 @@ jobs:
             DESTDIR="$PWD/install" make install
             cd ..
 
+            # Integrate external WCPs
             mkdir -p "$BUILD_DIR/external"
             wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/DXVK-GPLASYNC-ARM64EC/dxvk-gplasync-arm64ec-2.7.1-1.wcp"
             mkdir -p "$BUILD_DIR/external/dxvk"
-            tar -xJf dxvk-gplasync-arm64ec-2.7.1-1.wcp \
-              -C "$BUILD_DIR/external/dxvk"
+            tar -xJf dxvk-gplasync-arm64ec-2.7.1-1.wcp -C "$BUILD_DIR/external/dxvk"
+
             wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/VKD3D-PROTON-ARM64EC/vkd3d-proton-arm64ec-3.0b.wcp"
             mkdir -p "$BUILD_DIR/external/vkd3d"
-            tar -xJf vkd3d-proton-arm64ec-3.0b.wcp \
-              -C "$BUILD_DIR/external/vkd3d"
+            tar -xJf vkd3d-proton-arm64ec-3.0b.wcp -C "$BUILD_DIR/external/vkd3d"
+
             wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/MESA-TURNIP-ARM64EC/mesa-turnip-arm64ec.wcp"
             mkdir -p "$BUILD_DIR/external/mesa"
-            tar -xJf mesa-turnip-arm64ec.wcp \
-              -C "$BUILD_DIR/external/mesa"
+            tar -xJf mesa-turnip-arm64ec.wcp -C "$BUILD_DIR/external/mesa"
 
+            # Unpack FEXCore
             mkdir -p "$WCP_DIR/lib/wine/arm64ec-windows"
-            wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/FEXCore/FEXCore-2601.wcp" \
-              -O FEXCore-2601.wcp
-            tar -xJf FEXCore-2601.wcp \
-              -C "$WCP_DIR/lib/wine/arm64ec-windows"
+            wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/FEXCore/FEXCore-2601.wcp" -O FEXCore-2601.wcp
+            tar -xJf FEXCore-2601.wcp -C "$WCP_DIR/lib/wine/arm64ec-windows"
 
+            # Build PHAT structure
             rm -rf "$WCP_DIR"
             mkdir -p "$WCP_DIR/bin" \
                      "$WCP_DIR/lib/wine/aarch64-unix" \
@@ -121,24 +128,20 @@ jobs:
                      "$WCP_DIR/vkd3d/arm64ec" \
                      "$WCP_DIR/mesa/turnip"
 
-            cp -v "$BUILD_DIR/install/bin/"{wine,wine64,wineserver,wineboot} \
-              "$WCP_DIR/bin/"
+            cp -v "$BUILD_DIR/install/bin/"{wine,wine64,wineserver,wineboot} "$WCP_DIR/bin/"
 
             cp -rv "$BUILD_DIR/install/lib/"* "$WCP_DIR/lib/wine/aarch64-unix/"
             cp -rv "$BUILD_DIR/install/lib/"* "$WCP_DIR/lib/wine/aarch64-windows/"
-            cp -rv "$WCP_DIR/lib/wine/arm64ec-windows/"* \
-              "$WCP_DIR/lib/wine/arm64ec-windows/"
+            cp -rv "$WCP_DIR/lib/wine/arm64ec-windows/"* "$WCP_DIR/lib/wine/arm64ec-windows/"
 
             cp -rv "$BUILD_DIR/external/dxvk/"* "$WCP_DIR/dxvk/arm64ec/"
             cp -rv "$BUILD_DIR/external/vkd3d/"* "$WCP_DIR/vkd3d/arm64ec/"
             cp -rv "$BUILD_DIR/external/mesa/"* "$WCP_DIR/mesa/turnip/"
 
-            printf "export WINEPREFIX=~/.wine\nexport WINEARCH=win64\n" \
-              > "$WCP_DIR/env.sh"
-            printf '{ "version":"%s", "arch":"arm64ec", "type":"phat" }' \
-              "$WINE_VERSION" > "$WCP_DIR/info.json"
+            printf "export WINEPREFIX=~/.wine\nexport WINEARCH=win64\n" > "$WCP_DIR/env.sh"
+            printf '{ "version":"%s", "arch":"arm64ec", "type":"phat" }' "$WINE_VERSION" > "$WCP_DIR/info.json"
 
-      - name: Upload wine-arm64ec-phat
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: wine-arm64ec-phat
