--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -8,140 +8,114 @@ on:
 
 jobs:
   build-arm64ec:
-    runs-on: ubuntu-22.04
+    # Use native GitHub ARM64 runner
+    runs-on: ubuntu-24.04-arm
 
     steps:
 
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Register QEMU for ARM
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: linux/arm64
+      - name: Install dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y --no-install-recommends \
+            build-essential wget git python3 gettext \
+            pkgconf cmake ninja-build autoconf automake libtool \
+            libc6-dev libfreetype-dev libfontconfig-dev \
+            libsdl2-dev libpulse-dev libasound2-dev \
+            libdbus-1-dev libdb-dev \
+            libavcodec-dev libavformat-dev libavutil-dev libswscale-dev \
+            libudev-dev ca-certificates
 
-      - name: Build inside ARM64 container
-        uses: addnab/docker-run-action@v3
-        with:
-          image: ubuntu:24.04
-          platform: linux/arm64
-          options: --privileged
-          run: |
-            set -e
+          sudo ln -sf /usr/bin/pkgconf /usr/local/bin/pkg-config
 
-            # Update base system
-            apt update
-            DEBIAN_FRONTEND=noninteractive apt install -y --no-install-recommends \
-              build-essential wget git python3 gettext \
-              pkgconf cmake ninja-build autoconf automake libtool \
-              libc6-dev libfreetype-dev libfontconfig-dev \
-              libsdl2-dev libpulse-dev libasound2-dev \
-              libdbus-1-dev libdb-dev \
-              libavcodec-dev libavformat-dev libavutil-dev libswscale-dev \
-              libudev-dev ca-certificates
+      - name: Setup llvm-mingw
+        run: |
+          mkdir -p "$HOME/llvm-mingw"
+          wget -q "https://github.com/mstorsjo/llvm-mingw/releases/download/20251216/llvm-mingw-20251216-ucrt-ubuntu-22.04-x86_64.tar.xz"
+          tar -xJf llvm-mingw-20251216-ucrt-ubuntu-22.04-x86_64.tar.xz \
+            -C "$HOME/llvm-mingw" --strip-components=1
+          rm llvm-mingw-20251216-ucrt-ubuntu-22.04-x86_64.tar.xz
+          echo "$HOME/llvm-mingw/bin" >> "$GITHUB_PATH"
 
-            # Symlink pkgconf → pkg-config
-            ln -sf /usr/bin/pkgconf /usr/local/bin/pkg-config
+      - name: Prepare Wine sources
+        run: |
+          git submodule update --init --recursive
+          mkdir -p wine
+          if [ ! -f wine/configure ]; then
+            wget -q "https://dl.winehq.org/wine/source/11.1/wine-11.1.tar.xz"
+            tar -xJf wine-11.1.tar.xz -C wine --strip-components=1
+          fi
+          git clone https://gitlab.winehq.org/wine/wine-staging.git wine-staging
+          cd wine-staging/patches
+          git apply ../*.patch || true
 
-            # Environment variables
-            export WINE_VERSION="11.1"
-            export LLVM_MINGW_VERSION="20251216"
-            export LLVM_MINGW_DIR="$HOME/llvm-mingw"
-            export BUILD_DIR="$PWD/build"
-            export WCP_DIR="$PWD/wcp"
+      - name: Build Wine with Wow64
+        run: |
+          mkdir -p build
+          cd build
+          export PKG_CONFIG=pkg-config
+          export PKG_CONFIG_PATH="/usr/lib/aarch64/pkgconfig:${PKG_CONFIG_PATH:-}"
+          export CC=aarch64-w64-mingw32-clang
+          export CXX=aarch64-w64-mingw32-clang++
+          export AR=aarch64-w64-mingw32-ar
+          export RANLIB=aarch64-w64-mingw32-ranlib
+          export STRIP=aarch64-w64-mingw32-strip
 
-            # Download & unpack llvm-mingw toolchain
-            mkdir -p "$LLVM_MINGW_DIR"
-            wget -q "https://github.com/mstorsjo/llvm-mingw/releases/download/${LLVM_MINGW_VERSION}/llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-x86_64.tar.xz"
-            tar -xJf llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-x86_64.tar.xz \
-              -C "$LLVM_MINGW_DIR" --strip-components=1
-            rm llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-x86_64.tar.xz
-            export PATH="$LLVM_MINGW_DIR/bin:$PATH"
+          ../wine/configure \
+            --host=aarch64-w64-mingw32 \
+            --with-wine-tools=../host \
+            --enable-win64 \
+            --enable-wow64 \
+            --enable-archs=arm64ec,aarch64 \
+            --disable-tests \
+            --enable-ntsync
 
-            # Prepare Wine sources
-            git submodule update --init --recursive
-            mkdir -p wine
-            if [ ! -f wine/configure ]; then
-              wget -q "https://dl.winehq.org/wine/source/${WINE_VERSION}/wine-${WINE_VERSION}.tar.xz"
-              tar -xJf "wine-${WINE_VERSION}.tar.xz" -C wine --strip-components=1
-            fi
+          make -j1
+          DESTDIR="$PWD/install" make install
 
-            # Apply Wine Staging patches
-            git clone https://gitlab.winehq.org/wine/wine-staging.git wine-staging
-            cd wine-staging/patches
-            git apply ../*.patch || true
-            cd -
+      - name: Integrate DXVK, VKD3D, Turnip
+        run: |
+          mkdir -p build/external
+          wget -q https://github.com/Arihany/WinlatorWCPHub/releases/download/DXVK-GPLASYNC-ARM64EC/dxvk-gplasync-arm64ec-2.7.1-1.wcp
+          mkdir -p build/external/dxvk
+          tar -xJf dxvk-gplasync-arm64ec-2.7.1-1.wcp \
+            -C build/external/dxvk
+          wget -q https://github.com/Arihany/WinlatorWCPHub/releases/download/VKD3D-PROTON-ARM64EC/vkd3d-proton-arm64ec-3.0b.wcp
+          mkdir -p build/external/vkd3d
+          tar -xJf vkd3d-proton-arm64ec-3.0b.wcp \
+            -C build/external/vkd3d
+          wget -q https://github.com/Arihany/WinlatorWCPHub/releases/download/MESA-TURNIP-ARM64EC/mesa-turnip-arm64ec.wcp
+          mkdir -p build/external/mesa
+          tar -xJf mesa-turnip-arm64ec.wcp \
+            -C build/external/mesa
 
-            # Configure & build Wine
-            mkdir -p "$BUILD_DIR"
-            cd "$BUILD_DIR"
-            export PKG_CONFIG=pkg-config
-            export PKG_CONFIG_PATH="/usr/lib/arm64/pkgconfig:${PKG_CONFIG_PATH:-}"
-            export CC=aarch64-w64-mingw32-clang
-            export CXX=aarch64-w64-mingw32-clang++
-            export AR=aarch64-w64-mingw32-ar
-            export RANLIB=aarch64-w64-mingw32-ranlib
-            export STRIP=aarch64-w64-mingw32-strip
+      - name: Unpack FEXCore
+        run: |
+          mkdir -p wcp/lib/wine/arm64ec-windows
+          wget -q https://github.com/Arihany/WinlatorWCPHub/releases/download/FEXCore/FEXCore-2601.wcp -O FEXCore.wcp
+          tar -xJf FEXCore.wcp -C wcp/lib/wine/arm64ec-windows
 
-            ../wine/configure \
-              --host=aarch64-w64-mingw32 \
-              --with-wine-tools=../host \
-              --enable-win64 \
-              --enable-wow64 \
-              --enable-archs=arm64ec,aarch64 \
-              --disable-tests \
-              --enable-ntsync \
-              --without-x \
-              --without-vulkan
+      - name: Prepare PHAT .wcp tree
+        run: |
+          rm -rf wcp
+          mkdir -p wcp/bin wcp/lib/wine/aarch64-unix \
+            wcp/lib/wine/aarch64-windows wcp/lib/wine/arm64ec-windows \
+            wcp/share/wine wcp/dxvk/arm64ec wcp/vkd3d/arm64ec wcp/mesa/turnip
 
-            make -j1
-            DESTDIR="$PWD/install" make install
-            cd ..
+          cp build/install/bin/{wine,wine64,wineboot,wineserver} wcp/bin/
+          cp -rv build/install/lib/* wcp/lib/wine/aarch64-unix/
+          cp -rv build/install/lib/* wcp/lib/wine/aarch64-windows/
+          cp -rv wcp/lib/wine/arm64ec-windows/* wcp/lib/wine/arm64ec-windows/
+          cp -rv build/external/dxvk/* wcp/dxvk/arm64ec/
+          cp -rv build/external/vkd3d/* wcp/vkd3d/arm64ec/
+          cp -rv build/external/mesa/* wcp/mesa/turnip/
 
-            # Integrate external WCPs
-            mkdir -p "$BUILD_DIR/external"
-            wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/DXVK-GPLASYNC-ARM64EC/dxvk-gplasync-arm64ec-2.7.1-1.wcp"
-            mkdir -p "$BUILD_DIR/external/dxvk"
-            tar -xJf dxvk-gplasync-arm64ec-2.7.1-1.wcp -C "$BUILD_DIR/external/dxvk"
+          printf "export WINEPREFIX=~/.wine\nexport WINEARCH=win64\n" > wcp/env.sh
+          printf '{ "version":"%s","arch":"arm64ec","type":"phat" }' "$WINE_VERSION" > wcp/info.json
 
-            wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/VKD3D-PROTON-ARM64EC/vkd3d-proton-arm64ec-3.0b.wcp"
-            mkdir -p "$BUILD_DIR/external/vkd3d"
-            tar -xJf vkd3d-proton-arm64ec-3.0b.wcp -C "$BUILD_DIR/external/vkd3d"
-
-            wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/MESA-TURNIP-ARM64EC/mesa-turnip-arm64ec.wcp"
-            mkdir -p "$BUILD_DIR/external/mesa"
-            tar -xJf mesa-turnip-arm64ec.wcp -C "$BUILD_DIR/external/mesa"
-
-            # Unpack FEXCore
-            mkdir -p "$WCP_DIR/lib/wine/arm64ec-windows"
-            wget -q "https://github.com/Arihany/WinlatorWCPHub/releases/download/FEXCore/FEXCore-2601.wcp" -O FEXCore-2601.wcp
-            tar -xJf FEXCore-2601.wcp -C "$WCP_DIR/lib/wine/arm64ec-windows"
-
-            # Build PHAT structure
-            rm -rf "$WCP_DIR"
-            mkdir -p "$WCP_DIR/bin" \
-                     "$WCP_DIR/lib/wine/aarch64-unix" \
-                     "$WCP_DIR/lib/wine/aarch64-windows" \
-                     "$WCP_DIR/lib/wine/arm64ec-windows" \
-                     "$WCP_DIR/share/wine" \
-                     "$WCP_DIR/dxvk/arm64ec" \
-                     "$WCP_DIR/vkd3d/arm64ec" \
-                     "$WCP_DIR/mesa/turnip"
-
-            cp -v "$BUILD_DIR/install/bin/"{wine,wine64,wineserver,wineboot} "$WCP_DIR/bin/"
-
-            cp -rv "$BUILD_DIR/install/lib/"* "$WCP_DIR/lib/wine/aarch64-unix/"
-            cp -rv "$BUILD_DIR/install/lib/"* "$WCP_DIR/lib/wine/aarch64-windows/"
-            cp -rv "$WCP_DIR/lib/wine/arm64ec-windows/"* "$WCP_DIR/lib/wine/arm64ec-windows/"
-
-            cp -rv "$BUILD_DIR/external/dxvk/"* "$WCP_DIR/dxvk/arm64ec/"
-            cp -rv "$BUILD_DIR/external/vkd3d/"* "$WCP_DIR/vkd3d/arm64ec/"
-            cp -rv "$BUILD_DIR/external/mesa/"* "$WCP_DIR/mesa/turnip/"
-
-            printf "export WINEPREFIX=~/.wine\nexport WINEARCH=win64\n" > "$WCP_DIR/env.sh"
-            printf '{ "version":"%s", "arch":"arm64ec", "type":"phat" }' "$WINE_VERSION" > "$WCP_DIR/info.json"
-
-      - name: Upload artifact
+      - name: Upload Wine .wcp
         uses: actions/upload-artifact@v4
         with:
           name: wine-arm64ec-phat
